--- a/css/main.css
+++ b/css/main.css
@@ -1232,16 +1232,19 @@ body {
   }
 }
 
-/*BUTTON FILTER*/
-.button-section {
-  display: flex;
-  justify-content: center;
-  padding-top: 94px;
-  margin-bottom: 20px;
+.section {
+  padding-top: 45px;
+  padding-bottom: 60px;
 }
 
-.button-section-link:not(:last-child) {
-  padding-right: 8px;
+.button-section {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.button-section-link {
+  margin-right: 8px;
+  margin-top: 15px;
 }
 
 .portfolio-button {
@@ -1264,99 +1267,5 @@ body {
 .portfolio-button:hover, .portfolio-button:focus {
   background-color: var(--accent-color);
   color: var(--primary-white-color);
-}
-
-/* end button section*/
-.portfolio-cards-list {
-  display: flex;
-  flex-wrap: wrap;
-  margin-bottom: 94px;
-  margin-top: 30px;
-}
-
-.portfolio-list {
-  width: calc((100% - 60px) / 3);
-  margin-right: 30px;
-  margin-top: 30px;
-  cursor: pointer;
-}
-
-.portfolio-list:nth-child(3n) {
-  margin-right: 0px;
-}
-
-.portfolio-list:hover, .portfolio-list:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
-.portfolio-list .photo-transition {
-  display: block;
-}
-
-.portfolio-list:hover .position-card {
-  transform: translateY(0%);
-}
-
-.photo-transition:focus .position-card {
-  transform: translateY(0%);
-}
-
-.photo-transition:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
-.position-img {
-  position: relative;
-  overflow: hidden;
-  top: 0;
-  left: 0;
-}
-
-.position-img .position-card {
-  position: absolute;
-  padding: 63px 24px;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 28px;
-  letter-spacing: 0.03em;
-  background-color: rgba(33, 150, 243, 0.9);
-  color: #fff;
-}
-
-.portfolio-border {
-  border-right: 1px solid #eeeeee;
-  border-bottom: 1px solid #eeeeee;
-  border-left: 1px solid #eeeeee;
-}
-
-.portfolio-border .portfolio-title {
-  padding-top: 20px;
-  padding-left: 24px;
-  padding-bottom: 4px;
-  font-family: Roboto, sans-serif;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
-  color: var(--primary-text-color);
-}
-
-.portfolio-border .portfolio-description {
-  padding-left: 24px;
-  padding-bottom: 20px;
-  font-family: Roboto, sans-serif;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 1.875;
-  letter-spacing: 0.03em;
-  color: var(--title-text-color);
 }
 /*# sourceMappingURL=main.css.map */
