--- a/sass/portfolio/_portfolio-content.scss
+++ b/sass/portfolio/_portfolio-content.scss
@@ -1,15 +1,17 @@
-/*BUTTON FILTER*/
-.button-section {
-  display: flex;
-  justify-content: center;
-  padding-top: 94px;
-  margin-bottom: 20px;
-
-  &-link:not(:last-child) {
-    padding-right: 8px;
-  }
+// /*BUTTON FILTER*/
+.section {
+  padding-top: 45px;
+  padding-bottom: 60px;
 }
 
+.button-section {
+  display: flex;
+  flex-wrap: wrap;
+  &-link {
+    margin-right: 8px;
+    margin-top: 15px;
+  }
+}
 .portfolio-button {
   font-family: Roboto, sans-serif;
   font-weight: 500;
@@ -32,100 +34,133 @@
     color: var(--primary-white-color);
   }
 }
+// .button-section {
+//   display: flex;
+//   justify-content: center;
+//   padding-top: 94px;
+//   margin-bottom: 20px;
 
-/* end button section*/
+//   &-link:not(:last-child) {
+//     padding-right: 8px;
+//   }
+// }
 
-.portfolio-cards-list {
-  display: flex;
-  flex-wrap: wrap;
-  margin-bottom: 94px;
-  margin-top: 30px;
-}
+// .portfolio-button {
+//   font-family: Roboto, sans-serif;
+//   font-weight: 500;
+//   font-size: 16px;
+//   cursor: pointer;
+//   line-height: 1.625;
+//   text-align: center;
+//   letter-spacing: 0.03em;
+//   border-radius: 4px;
+//   border-color: transparent;
+//   color: var(--primary-text-color);
+//   background-color: #f5f4fa;
+//   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+//   min-width: 59px;
+//   padding: 6px 22px;
 
-.portfolio-list {
-  width: calc((100% - 60px) / 3);
-  margin-right: 30px;
-  margin-top: 30px;
-  cursor: pointer;
+//   &:hover,
+//   &:focus {
+//     background-color: var(--accent-color);
+//     color: var(--primary-white-color);
+//   }
+// }
 
-  &:nth-child(3n) {
-    margin-right: 0px;
-  }
+// /* end button section*/
 
-  &:hover,
-  &:focus {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-      1px 4px 6px rgba(0, 0, 0, 0.16);
-  }
-  & .photo-transition {
-    display: block;
-  }
-  &:hover .position-card {
-    transform: translateY(0%);
-  }
-}
+// .portfolio-cards-list {
+//   display: flex;
+//   flex-wrap: wrap;
+//   margin-bottom: 94px;
+//   margin-top: 30px;
+// }
 
-.photo-transition {
-  &:focus .position-card {
-    transform: translateY(0%);
-  }
-  &:focus {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-      1px 4px 6px rgba(0, 0, 0, 0.16);
-  }
-}
+// .portfolio-list {
+//   width: calc((100% - 60px) / 3);
+//   margin-right: 30px;
+//   margin-top: 30px;
+//   cursor: pointer;
 
-.position-img {
-  position: relative;
-  overflow: hidden;
-  top: 0;
-  left: 0;
+//   &:nth-child(3n) {
+//     margin-right: 0px;
+//   }
 
-  .position-card {
-    position: absolute;
-    padding: 63px 24px;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    transform: translateY(100%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+//   &:hover,
+//   &:focus {
+//     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+//       1px 4px 6px rgba(0, 0, 0, 0.16);
+//   }
+//   & .photo-transition {
+//     display: block;
+//   }
+//   &:hover .position-card {
+//     transform: translateY(0%);
+//   }
+// }
 
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 18px;
-    line-height: 28px;
-    letter-spacing: 0.03em;
-    background-color: rgba(33, 150, 243, 0.9);
-    color: #fff;
-  }
-}
+// .photo-transition {
+//   &:focus .position-card {
+//     transform: translateY(0%);
+//   }
+//   &:focus {
+//     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+//       1px 4px 6px rgba(0, 0, 0, 0.16);
+//   }
+// }
 
-.portfolio-border {
-  border-right: 1px solid rgba(238, 238, 238, 1);
-  border-bottom: 1px solid rgba(238, 238, 238, 1);
-  border-left: 1px solid rgba(238, 238, 238, 1);
+// .position-img {
+//   position: relative;
+//   overflow: hidden;
+//   top: 0;
+//   left: 0;
 
-  .portfolio-title {
-    padding-top: 20px;
-    padding-left: 24px;
-    padding-bottom: 4px;
-    font-family: Roboto, sans-serif;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 2;
-    letter-spacing: 0.06em;
-    color: var(--primary-text-color);
-  }
-  .portfolio-description {
-    padding-left: 24px;
-    padding-bottom: 20px;
-    font-family: Roboto, sans-serif;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 1.875;
-    letter-spacing: 0.03em;
-    color: var(--title-text-color);
-  }
-}
+//   .position-card {
+//     position: absolute;
+//     padding: 63px 24px;
+//     top: 0;
+//     left: 0;
+//     width: 100%;
+//     height: 100%;
+//     transform: translateY(100%);
+//     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+//     font-family: Roboto;
+//     font-style: normal;
+//     font-weight: normal;
+//     font-size: 18px;
+//     line-height: 28px;
+//     letter-spacing: 0.03em;
+//     background-color: rgba(33, 150, 243, 0.9);
+//     color: #fff;
+//   }
+// }
+
+// .portfolio-border {
+//   border-right: 1px solid rgba(238, 238, 238, 1);
+//   border-bottom: 1px solid rgba(238, 238, 238, 1);
+//   border-left: 1px solid rgba(238, 238, 238, 1);
+
+//   .portfolio-title {
+//     padding-top: 20px;
+//     padding-left: 24px;
+//     padding-bottom: 4px;
+//     font-family: Roboto, sans-serif;
+//     font-weight: 700;
+//     font-size: 18px;
+//     line-height: 2;
+//     letter-spacing: 0.06em;
+//     color: var(--primary-text-color);
+//   }
+//   .portfolio-description {
+//     padding-left: 24px;
+//     padding-bottom: 20px;
+//     font-family: Roboto, sans-serif;
+//     font-weight: normal;
+//     font-size: 16px;
+//     line-height: 1.875;
+//     letter-spacing: 0.03em;
+//     color: var(--title-text-color);
+//   }
+// }
