--- a/sass/portfolio/_portfolio-content.scss
+++ b/sass/portfolio/_portfolio-content.scss
@@ -34,6 +34,109 @@
     color: var(--primary-white-color);
   }
 }
+.portfolio-cards-list {
+  display: block;
+  width: 100%;
+  margin-bottom: 60px;
+}
+.portfolio-list {
+  width: 100%;
+  .portfolio-list:hover,
+  .portfolio-list:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
+  .portfolio-list .photo-transition {
+    display: block;
+  }
+  .photo-transition:hover .position-card {
+    transform: translateY(0%);
+  }
+}
+.portfolio-list:not(:last-child) {
+  margin-bottom: 30px;
+}
+
+.position-img {
+  position: relative;
+  overflow: hidden;
+  top: 0;
+  left: 0;
+
+  .position-card {
+    position: absolute;
+    padding: 63px 24px;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 28px;
+    letter-spacing: 0.03em;
+    background-color: rgba(33, 150, 243, 0.9);
+    color: #fff;
+  }
+}
+
+.portfolio-border {
+  border-right: 1px solid rgba(238, 238, 238, 1);
+  border-bottom: 1px solid rgba(238, 238, 238, 1);
+  border-left: 1px solid rgba(238, 238, 238, 1);
+
+  .portfolio-title {
+    padding-top: 20px;
+    padding-bottom: 4px;
+    font-family: Roboto, sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
+    color: var(--primary-text-color);
+  }
+  .portfolio-description {
+    padding-bottom: 20px;
+    font-family: Roboto, sans-serif;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 1.875;
+    letter-spacing: 0.03em;
+    color: var(--title-text-color);
+  }
+}
+@media screen and (min-width: 768px) {
+  .section {
+    padding-bottom: 30px;
+  }
+  .button-section-link {
+    margin-top: 0;
+  }
+  .button-section {
+    display: flex;
+    justify-content: center;
+  }
+  .portfolio-cards-list {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .portfolio-list {
+    width: calc((100% - 4 * 15px) / 2);
+    margin: 15px;
+  }
+  .portfolio-list:not(:last-child) {
+    margin-bottom: 0;
+  }
+  .portfolio-border {
+    padding: 20px 24px;
+  }
+  .portfolio-title {
+  }
+}
 // .button-section {
 //   display: flex;
 //   justify-content: center;
