--- a/css/main.css
+++ b/css/main.css
@@ -1247,6 +1247,19 @@ body {
     font-size: 14px;
     line-height: 1.714;
   }
+  .backdrop {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.1);
+    transition-property: opacity, visibility;
+    transition-duration: 400ms;
+    transition-timing-function: var(--timing);
+    opacity: 1;
+    z-index: 20;
+  }
 }
 
 img {
@@ -1254,7 +1267,7 @@ img {
 }
 
 .section {
-  padding-top: 45px;
+  padding-top: 40px;
   padding-bottom: 60px;
 }
 
@@ -1352,6 +1365,7 @@ img {
 
 .portfolio-border {
   max-height: 151px;
+  padding: 20px 24px;
 }
 
 .portfolio-border .portfolio-title {
@@ -1375,7 +1389,8 @@ img {
 
 @media screen and (min-width: 768px) {
   .section {
-    padding-bottom: 30px;
+    padding-bottom: 14px;
+    padding-top: 60px;
   }
   .button-section-link {
     margin-top: 0;
