--- a/sass/layout/_modal-form.scss
+++ b/sass/layout/_modal-form.scss
@@ -238,4 +238,17 @@
     font-size: 14px;
     line-height: 1.714;
   }
+  .backdrop {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.1);
+    transition-property: opacity, visibility;
+    transition-duration: 400ms;
+    transition-timing-function: var(--timing);
+    opacity: 1;
+    z-index: 20;
+  }
 }
