--- a/sass/portfolio/_portfolio-content.scss
+++ b/sass/portfolio/_portfolio-content.scss
@@ -4,7 +4,7 @@ img {
 }
 
 .section {
-  padding-top: 45px;
+  padding-top: 40px;
   padding-bottom: 60px;
 }
 
@@ -97,6 +97,8 @@ img {
 
 .portfolio-border {
   max-height: 151px;
+  padding: 20px 24px;
+
   .portfolio-title {
     margin-bottom: 4px;
     font-family: Roboto, sans-serif;
@@ -117,7 +119,8 @@ img {
 }
 @media screen and (min-width: 768px) {
   .section {
-    padding-bottom: 30px;
+    padding-bottom: 14px;
+    padding-top: 60px;
   }
   .button-section-link {
     margin-top: 0;
